ipcz: Preparation for proper multinode test framework
Covers a few small, miscellaneous bits of work needed to support a
new multinode test framework, in no particular order:

- DriverObject decoupling from Node. DriverObject needs an
  IpczDriver ref, and it gets that from a Ref<Node> it holds.
  It doesn't use the Node for any other reason, and IpczDriver
  refs are always static in practice. So this changes DriverObject
  to more directly retain an IpczDriver ref. Most of the changes
  here are superficial and a result of that.

- Node disconnection and route closure propagation cleanup.
  This gets rid of some *ForTesting() APIs recently introduced
  to cover node disconnection, by slightly refactoring Node
  closure. Also trivially fixes a potential deadlock in Router
  closure forwarding.

- Single-process reference driver cleanup now deserializes
  stored messages to ensure that any encoded driver objects
  are properly cleaned up and won't leak resources, so that
  individual tests no longer need to worry about this.

- Removes GTest's Test from the inheritance chain of
  ipcz::test::TestBase. The latter will be used as the basis
  for multiple objects running in parellel during each multinode
  test, and GTest's Test class is not compatible with mutliple
  concurrent instances.

Bug: 1299283
Change-Id: I9f17e621de64660a71a902316ea556cc013ef357
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3665519
Reviewed-by: Alex Gough <ajgo@chromium.org>
Commit-Queue: Ken Rockot <rockot@google.com>
Cr-Commit-Position: refs/heads/main@{#1007743}
NOKEYCHECK=True
GitOrigin-RevId: 30b63ae2e345cbbdc6563454080cc25faa0af8f3

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -186,7 +186,10 @@ ipcz_source_set("reference_drivers") {
     }
   }
 
-  ipcz_deps = [ ":util" ]
+  ipcz_deps = [
+    ":impl",
+    ":util",
+  ]
   public_deps = [ ":ipcz_header" ]
   configs = [ ":ipcz_include_src_dir" ]
 
@@ -347,6 +350,7 @@ ipcz_source_set("ipcz_tests_sources") {
     "test/mock_driver.h",
     "test/multinode_test.cc",
     "test/multinode_test.h",
+    "test/test.h",
     "test/test_base.cc",
     "test/test_base.h",
     "test/test_transport_listener.cc",
