ipcz: Implement SocketTransport
This implements a new driver transport based on Unix domain
sockets, for use by a multiprocess-capable reference driver on
Linux.

Bug: 1299283
Change-Id: Ib7a9442194e0a2055f35cabdd15e563c33650e07
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3651566
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Reviewed-by: Wez <wez@chromium.org>
Reviewed-by: Will Harris <wfh@chromium.org>
Commit-Queue: Ken Rockot <rockot@google.com>
Reviewed-by: Fabrice de Gans <fdegans@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1012732}
NOKEYCHECK=True
GitOrigin-RevId: c3547d72a599a4f8fd6f63ecc5d350a5736025dc

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -146,10 +146,12 @@ ipcz_source_set("reference_drivers") {
     public += [
       "reference_drivers/file_descriptor.h",
       "reference_drivers/memfd_memory.h",
+      "reference_drivers/socket_transport.h",
     ]
     sources += [
       "reference_drivers/file_descriptor.cc",
       "reference_drivers/memfd_memory.cc",
+      "reference_drivers/socket_transport.cc",
     ]
   }
 
@@ -329,7 +331,10 @@ ipcz_source_set("ipcz_tests_sources") {
   ]
 
   if (is_linux) {
-    sources += [ "reference_drivers/memfd_memory_test.cc" ]
+    sources += [
+      "reference_drivers/memfd_memory_test.cc",
+      "reference_drivers/socket_transport_test.cc",
+    ]
   }
 
   deps = [
