MojoIpcz: MOJO_TRAP_EVENT_WITHIN_API_CALL support
This implements a new IPCZ_TRAP_WITHIN_API_CALL flag to indicate whether
trap events are a direct result of ipcz API calls (and thus should
avoid potentially reentrant behavior) or are a result of notifications
from a remote node.

This flag is in turn used to reflect the equivalent
MOJO_TRAP_EVENT_WITHIN_API_CALL flag to Mojo trap event handlers.

The net result is event flag parity with pre-ipcz Mojo, and more
concretely that Mojo's widely used SimpleWatcher will now make the same
dispatch/PostTask decisions with or without ipcz enabled.

Bug: 1299283
Change-Id: If46656053515016d8a4f5685030782da90ea3d2d
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3942362
Commit-Queue: Ken Rockot <rockot@google.com>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Commit-Queue: Daniel Cheng <dcheng@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1058828}
NOKEYCHECK=True
GitOrigin-RevId: e9a0eaf8f3ffedcf92b6ecc72cab170fc1080765

--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -229,6 +229,7 @@ ipcz_source_set("impl") {
     "ipcz/node_messages.h",
     "ipcz/node_name.h",
     "ipcz/node_type.h",
+    "ipcz/operation_context.h",
     "ipcz/parcel.h",
     "ipcz/parcel_queue.h",
     "ipcz/portal.h",
